src/test/ui/suggestions/const-pat-non-exaustive-let-new-var.stderr
error[E0005]: refutable pattern in local binding: `i32::MIN..=1_i32` and `3_i32..=i32::MAX` not covered
  --> $DIR/const-pat-non-exaustive-let-new-var.rs:2:9
   |
LL |     let A = 3;
   |         ^
   |         |
   |         interpreted as a constant pattern, not a new variable
   |         help: introduce a variable instead: `a_var`
...
LL |     const A: i32 = 2;
   |     ----------------- constant defined here
   |
   = note: the matched value is of type `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
